--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.14",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
