--- a/src/server/package.json
+++ b/src/server/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
